.metadata/.plugins/org.eclipse.cdt.ui/Assignment1.build.log
12:54:56 **** Incremental Build of configuration Debug for project Assignment1 ****
make all 
Building file: ../src/Assignment1.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment1.d" -MT"src/Assignment1.d" -o "src/Assignment1.o" "../src/Assignment1.cpp"
../src/Assignment1.cpp:35:19: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  Node *root = new Node;
                   ^
../src/Assignment1.cpp: In function ‘int main()’:
../src/Assignment1.cpp:188:2: error: expected ‘;’ before ‘}’ token
  }
  ^
make: *** [src/Assignment1.o] Error 1

12:54:57 Build Finished (took 463ms)

